@@ -55,49 +55,49 @@ gboolean
 nm_gconf_get_int_helper (GConfClient *client,
 					const char *path,
 					const char *key,
-					const char *network,
+					const char *setting,
 					int *value);
 
 gboolean
 nm_gconf_get_float_helper (GConfClient *client,
 					const char *path,
 					const char *key,
-					const char *network,
+					const char *setting,
 					gfloat *value);
 
 gboolean
 nm_gconf_get_string_helper (GConfClient *client,
 					const char *path,
 					const char *key,
-					const char *network,
+					const char *setting,
 					char **value);
 
 gboolean
 nm_gconf_get_bool_helper (GConfClient *client,
 					const char *path,
 					const char *key,
-					const char *network,
+					const char *setting,
 					gboolean *value);
 
 gboolean
 nm_gconf_get_stringlist_helper (GConfClient *client,
 				const char *path,
 				const char *key,
-				const char *network,
+				const char *setting,
 				GSList **value);
 
 gboolean
 nm_gconf_get_bytearray_helper (GConfClient *client,
 			       const char *path,
 			       const char *key,
-			       const char *network,
+			       const char *setting,
 			       GByteArray **value);
 
 gboolean
 nm_gconf_get_uint_array_helper (GConfClient *client,
 				const char *path,
 				const char *key,
-				const char *network,
+				const char *setting,
 				GArray **value);
 
 
@@ -105,7 +105,7 @@ nm_gconf_get_uint_array_helper (GConfClient *client,
 gboolean
 nm_gconf_get_valuehash_helper (GConfClient *client,
 			       const char *path,
-			       const char *network,
+			       const char *setting,
 			       GHashTable **value);
 #endif
 
@@ -119,7 +119,7 @@ gboolean
 nm_gconf_get_ip4_helper (GConfClient *client,
 						  const char *path,
 						  const char *key,
-						  const char *network,
+						  const char *setting,
 						  guint32 tuple_len,
 						  GPtrArray **value);
 
@@ -129,70 +129,70 @@ gboolean
 nm_gconf_set_int_helper (GConfClient *client,
                          const char *path,
                          const char *key,
-                         const char *network,
+                         const char *setting,
                          int value);
 
 gboolean
 nm_gconf_set_float_helper (GConfClient *client,
                            const char *path,
                            const char *key,
-                           const char *network,
+                           const char *setting,
                            gfloat value);
 
 gboolean
 nm_gconf_set_string_helper (GConfClient *client,
                             const char *path,
                             const char *key,
-                            const char *network,
+                            const char *setting,
                             const char *value);
 
 gboolean
 nm_gconf_set_bool_helper (GConfClient *client,
                           const char *path,
                           const char *key,
-                          const char *network,
+                          const char *setting,
                           gboolean value);
 
 gboolean
 nm_gconf_set_stringlist_helper (GConfClient *client,
                                 const char *path,
                                 const char *key,
-                                const char *network,
+                                const char *setting,
                                 GSList *value);
 
 gboolean
 nm_gconf_set_bytearray_helper (GConfClient *client,
                                const char *path,
                                const char *key,
-                               const char *network,
+                               const char *setting,
                                GByteArray *value);
 
 gboolean
 nm_gconf_set_uint_array_helper (GConfClient *client,
 				const char *path,
 				const char *key,
-				const char *network,
+				const char *setting,
 				GArray *value);
 
 #if UNUSED
 gboolean
 nm_gconf_set_valuehash_helper (GConfClient *client,
 			       const char *path,
-			       const char *network,
+			       const char *setting,
 			       GHashTable *value);
 #endif
 
 gboolean
 nm_gconf_set_stringhash_helper (GConfClient *client,
                                 const char *path,
-                                const char *network,
+                                const char *setting,
                                 GHashTable *value);
 
 gboolean
 nm_gconf_set_ip4_helper (GConfClient *client,
 					  const char *path,
 					  const char *key,
-					  const char *network,
+					  const char *setting,
 					  guint32 tuple_len,
 					  GPtrArray *value);
 
